syntax = "proto3";
package vm;
option go_package = "./proto";

service VM {
    rpc Execute(Request) returns (Response);
}

message Request {
    uint64 projectID = 1;
    bytes code = 2;
    bytes expParam = 3;
    bytes taskID = 4;
    bytes deviceID = 5;
    bytes apinodeSignature = 6;
    repeated bytes payloads = 7;
}

message Response {
    bytes result = 1;
}
